--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,6 +163,31 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp" />
 
+            <TextView
+                android:id="@+id/heightTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/lifestyle"
+                android:layout_alignStart="@+id/age"
+                android:layout_marginTop="24dp"
+                android:text="@string/your_height"
+                android:textColor="@color/colorPrimary"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/height"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/heightTextView"
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@android:color/white"
+                android:hint="@string/yout_height_cm"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:textColorHint="@android:color/darker_gray"
+                android:textSize="16sp"/>
+
             <Button
                 android:id="@+id/begin"
                 android:layout_width="200dp"
@@ -171,9 +196,15 @@
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:backgroundTint="@color/colorPrimary"
-                android:layout_below="@+id/lifestyle"
+                android:layout_below="@+id/height"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="64dp"/>
+                android:layout_marginTop="48dp"
+                android:layout_marginBottom="50dp"/>
+            <View
+                style="@style/DividerWhite"
+                android:layout_below="@+id/begin"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
